--- a/package.json
+++ b/package.json
@@ -2,18 +2,8 @@
   "name": "application-name",
   "version": "0.0.1",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
-  },
-  "devDependencies": {
-    "coveralls": "^2.12.0",
-    "nsp": "^2.6.3",
-    "eslint": "^3.18.0",
-    "eslint-config-xo-space": "^0.16.0",
-    "jest": "^19.0.2",
-    "jest-cli": "^19.0.1"
-  },
-  "scripts": {
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
     "prepublish": "nsp check",
     "pretest": "eslint . --fix",
     "test": "jest"
@@ -28,7 +18,14 @@
   "jest": {
     "testEnvironment": "node"
   },
-  "license": "Apache-2.0",
+  "devDependencies": {
+    "coveralls": "^2.12.0",
+    "nsp": "^2.6.3",
+    "eslint": "^3.18.0",
+    "eslint-config-xo-space": "^0.16.0",
+    "jest": "^19.0.2",
+    "jest-cli": "^19.0.1"
+  },
   "dependencies": {
     "express": "^4.15.2",
     "bluebird": "^3.5.0"
