--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "application-name",
   "version": "0.0.1",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
+    "start": "babel-node src/index.js --presets es2015,stage-2",
+    "dev": "nodemon src/index.js --exec babel-node --presets es2015,stage-2",
     "prepublish": "nsp check",
     "pretest": "eslint . --fix",
     "test": "jest"
