--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "express": "^4.15.2",
-    "bluebird": "^3.5.0"
+    "bluebird": "^3.5.0",
+    "aws-s3-promisified": "^2.0.0"
   }
 }
