--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "application-name",
   "version": "0.0.1",
   "scripts": {
-    "start": "babel-node src/index.js --presets es2015,stage-2",
-    "dev": "nodemon src/index.js --exec babel-node --presets es2015,stage-2",
+    "start": "babel-node server.js --presets es2015,stage-2",
+    "dev": "nodemon server.js --exec babel-node --presets es2015,stage-2",
     "prepublish": "nsp check",
     "pretest": "eslint . --fix",
     "test": "jest"
@@ -21,6 +21,7 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "coveralls": "^2.12.0",
     "eslint": "^3.18.0",
     "eslint-config-xo-space": "^0.16.0",
@@ -29,8 +30,10 @@
     "nsp": "^2.6.3"
   },
   "dependencies": {
-    "express": "^4.15.2",
+    "aws-s3-promisified": "^2.0.0",
     "bluebird": "^3.5.0",
-    "aws-s3-promisified": "^2.0.0"
+    "body-parser": "^1.17.1",
+    "express": "^4.15.2",
+    "lodash": "^4.17.4"
   }
 }
