--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "aws-s3-promisified": "^2.0.0",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
+    "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "lodash": "^4.17.4"
   }
