--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "application-name",
   "version": "0.0.1",
+  "engines": {
+    "node": "^6.10.3"
+  },
+  "engineStrict": true,
   "scripts": {
     "start": "babel-node server.js --presets es2015,stage-2",
     "dev": "nodemon server.js --exec babel-node --presets es2015,stage-2",
@@ -30,11 +34,12 @@
     "nsp": "^2.6.3"
   },
   "dependencies": {
-    "aws-s3-promisified": "^2.0.0",
+    "aws-sdk": "^2.56.0",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "mkdirp": "^0.5.1"
   }
 }
